fix : 신규 변역 추가

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -11,10 +11,13 @@
   "견적가": "Quote price",
   "견적 정보": "Quote information",
   "잘못된 접근입니다. moverId가 없습니다.": "Invalid access. moverId is missing.",
+  "견적서 목록": "Quote list",
+  "해당 조건의 견적서가 없습니다.": "No quotes available for the given criteria.",
   "확정하지 않은 견적이에요!": "This quote has not been confirmed!",
   "견적 확정하기": "Confirm quote",
   "지정 견적 요청하기": "Request a designated quote",
-  "대기중인 견적이 없습니다": "No pending quotes",
+  "요청된 견적이 없습니다.": "No quotes have been requested.",
+  "대기중인 견적이 없습니다.": "No pending quotes.",
   "찜한 기사님": "Favorite movers",
   "지역": "Region",
   "기사님 이름, 지역, 서비스 종류 등으로 검색": "Search by mover name, region, service type, etc.",
@@ -26,6 +29,7 @@
   "등록된 기사님이 없습니다.": "No registered movers available.",
   "몇 가지 정보만 알려주시면 최대 5개의 견적을 받을 수 있어요 :)": "Provide a few details to receive up to 5 quotes :)",
   "이사 종류를 선택해 주세요.": "Please select a type of move.",
+  "수정하기": "Edit",
   "이사 예정일을 선택해주세요.": "Please select the expected moving date.",
   "이사 지역을 선택해주세요.": "Please select the moving region.",
   "진행 중인 이사 견적이 있어 새 견적은 받을 수 없습니다.": "You already have a quote in progress. You can't receive a new one.",
@@ -89,7 +93,6 @@
   "내가 사는 지역": "My region",
   "*내가 사는 지역은 언제든 수정 가능해요!": "*You can update your region at any time!",
   "취소": "Cancel",
-  "수정하기": "Edit",
   "프로필 이미지를 업로드해주세요.": "Please upload a profile image.",
   "프로필이 성공적으로 등록되었습니다.": "Profile registered successfully.",
   "프로필 등록 중 오류가 발생했습니다.": "An error occurred during profile registration.",
@@ -121,23 +124,6 @@
   "이름을 입력해주세요.": "Please enter your name.",
   "이메일": "Email",
   "전화번호": "Phone number",
-  "서울": "Seoul",
-  "경기": "Gyeonggi",
-  "인천": "Incheon",
-  "강원": "Gangwon",
-  "충북": "Chungbuk",
-  "충남": "Chungnam",
-  "세종": "Sejong",
-  "대전": "Daejeon",
-  "전북": "Jeonbuk",
-  "전남": "Jeonnam",
-  "광주": "Gwangju",
-  "경북": "Gyeongbuk",
-  "경남": "Gyeongnam",
-  "대구": "Daegu",
-  "울산": "Ulsan",
-  "부산": "Busan",
-  "제주": "Jeju",
   "리뷰 작성하러 가기": "Write a review",
   "도로명": "Road name",
   "지번": "Lot number",
