--- a/public/locales/ko/common.json
+++ b/public/locales/ko/common.json
@@ -11,10 +11,13 @@
   "견적가": "",
   "견적 정보": "",
   "잘못된 접근입니다. moverId가 없습니다.": "",
+  "견적서 목록": "",
+  "해당 조건의 견적서가 없습니다.": "",
   "확정하지 않은 견적이에요!": "",
   "견적 확정하기": "",
   "지정 견적 요청하기": "",
-  "대기중인 견적이 없습니다": "",
+  "요청된 견적이 없습니다.": "",
+  "대기중인 견적이 없습니다.": "",
   "찜한 기사님": "",
   "지역": "",
   "기사님 이름, 지역, 서비스 종류 등으로 검색": "",
@@ -26,6 +29,7 @@
   "등록된 기사님이 없습니다.": "",
   "몇 가지 정보만 알려주시면 최대 5개의 견적을 받을 수 있어요 :)": "",
   "이사 종류를 선택해 주세요.": "",
+  "수정하기": "",
   "이사 예정일을 선택해주세요.": "",
   "이사 지역을 선택해주세요.": "",
   "진행 중인 이사 견적이 있어 새 견적은 받을 수 없습니다.": "",
@@ -89,7 +93,6 @@
   "내가 사는 지역": "",
   "*내가 사는 지역은 언제든 수정 가능해요!": "",
   "취소": "",
-  "수정하기": "",
   "프로필 이미지를 업로드해주세요.": "",
   "프로필이 성공적으로 등록되었습니다.": "",
   "프로필 등록 중 오류가 발생했습니다.": "",
@@ -121,23 +124,6 @@
   "이름을 입력해주세요.": "",
   "이메일": "",
   "전화번호": "",
-  "서울": "",
-  "경기": "",
-  "인천": "",
-  "강원": "",
-  "충북": "",
-  "충남": "",
-  "세종": "",
-  "대전": "",
-  "전북": "",
-  "전남": "",
-  "광주": "",
-  "경북": "",
-  "경남": "",
-  "대구": "",
-  "울산": "",
-  "부산": "",
-  "제주": "",
   "리뷰 작성하러 가기": "",
   "도로명": "",
   "지번": "",
