--- a/public/locales/zh/common.json
+++ b/public/locales/zh/common.json
@@ -11,10 +11,13 @@
   "견적가": "报价金额",
   "견적 정보": "报价信息",
   "잘못된 접근입니다. moverId가 없습니다.": "无效的访问。缺少moverId。",
+  "견적서 목록": "报价单列表",
+  "해당 조건의 견적서가 없습니다.": "没有符合条件的报价单。",
   "확정하지 않은 견적이에요!": "尚未确认的报价！",
   "견적 확정하기": "确认报价",
   "지정 견적 요청하기": "请求指定报价",
-  "대기중인 견적이 없습니다": "没有待处理的报价",
+  "요청된 견적이 없습니다.": "没有请求的报价。",
+  "대기중인 견적이 없습니다.": "没有待处理的报价。",
   "찜한 기사님": "收藏的搬家师傅",
   "지역": "地区",
   "기사님 이름, 지역, 서비스 종류 등으로 검색": "搜索搬家师傅姓名、地区或服务类型等",
@@ -26,6 +29,7 @@
   "등록된 기사님이 없습니다.": "没有已注册的搬家师傅。",
   "몇 가지 정보만 알려주시면 최대 5개의 견적을 받을 수 있어요 :)": "只需提供一些信息，最多可获得5个报价 :)",
   "이사 종류를 선택해 주세요.": "请选择搬家类型。",
+  "수정하기": "修改",
   "이사 예정일을 선택해주세요.": "请选择预定搬家日期。",
   "이사 지역을 선택해주세요.": "请选择搬家地区。",
   "진행 중인 이사 견적이 있어 새 견적은 받을 수 없습니다.": "已有进行中的搬家报价，无法接收新的报价。",
@@ -89,7 +93,6 @@
   "내가 사는 지역": "我所在地区",
   "*내가 사는 지역은 언제든 수정 가능해요!": "*居住地区可随时修改！",
   "취소": "取消",
-  "수정하기": "修改",
   "프로필 이미지를 업로드해주세요.": "请上传个人资料图片。",
   "프로필이 성공적으로 등록되었습니다.": "个人资料注册成功。",
   "프로필 등록 중 오류가 발생했습니다.": "注册资料时发生错误。",
@@ -121,23 +124,6 @@
   "이름을 입력해주세요.": "请输入姓名。",
   "이메일": "邮箱",
   "전화번호": "电话号码",
-  "서울": "首尔",
-  "경기": "京畿",
-  "인천": "仁川",
-  "강원": "江原",
-  "충북": "忠北",
-  "충남": "忠南",
-  "세종": "世宗",
-  "대전": "大田",
-  "전북": "全北",
-  "전남": "全南",
-  "광주": "光州",
-  "경북": "庆北",
-  "경남": "庆南",
-  "대구": "大邱",
-  "울산": "蔚山",
-  "부산": "釜山",
-  "제주": "济州",
   "리뷰 작성하러 가기": "去写评价",
   "도로명": "道路名",
   "지번": "地段号",
