fix: 파일 오탈자 수정, 빈 데이터인 경우 이미지 위치 조정, 고객프로필 미등록시 기사님 찾기 페이지 접속 시 스낵바 띄움

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -189,5 +189,6 @@
   "로그인 성공": "Login successful",
   "로그인 실패": "Login failed",
   "회원가입 성공": "Signup successful",
-  "회원가입 실패": "Signup failed"
+  "회원가입 실패": "Signup failed",
+  "프로필 등록 후 이용 가능한 페이지입니다.": "This page will be available after you complete your profile registration."
 }
