--- a/public/locales/zh/common.json
+++ b/public/locales/zh/common.json
@@ -189,5 +189,6 @@
   "로그인 성공": "登录成功",
   "로그인 실패": "登录失败",
   "회원가입 성공": "注册成功",
-  "회원가입 실패": "注册失败"
+  "회원가입 실패": "注册失败",
+  "프로필 등록 후 이용 가능한 페이지입니다.": "完成个人资料注册后，此页面将可供访问。"
 }
