fix : locale 설청 추가

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,6 +1,29 @@
 {
+  "일반 유저라면?": "Are you a regular user?",
+  "일반 유저 전용 페이지": "Page for regular users",
+  "아직 무빙 회원이 아니신가요?": "Not a member of Moving yet?",
+  "이메일로 회원가입하기": "Sign up with email",
+  "이메일": "Email",
+  "이메일을 입력해주세요": "Please enter your email",
+  "비밀번호": "Password",
+  "비밀번호를 입력해 주세요": "Please enter your password",
+  "로그인": "Login",
+  "SNS 간편 로그인": "Login with SNS",
+  "이미 무빙 회원이신가요?": "Already a member of Moving?",
+  "이름": "Name",
+  "성함을 입력해 주세요": "Please enter your name",
+  "전화번호": "Phone number",
+  "숫자만 입력해 주세요": "Please enter numbers only",
+  "비밀번호 확인": "Confirm password",
+  "비밀번호를 다시 한번 입력해 주세요": "Please re-enter your password",
+  "기사님이신가요?": "Are you a mover?",
+  "기사님 전용 페이지": "Page for movers",
+  "시작하기": "Get started",
+  "프로필 등록 후 이용 가능한 페이지입니다.": "This page is available after registering your profile.",
+  "기사님 찾기": "Find a mover",
   "원하는 이사 서비스를 요청하고": "Request the moving service you want",
   "견적을 받아보세요": "Get a quote",
+  "회원가입": "Sign up",
   "견적 요청일": "Quote request date",
   "서비스": "Service",
   "이용일": "Usage date",
@@ -16,6 +39,8 @@
   "확정하지 않은 견적이에요!": "This quote has not been confirmed!",
   "견적 확정하기": "Confirm quote",
   "지정 견적 요청하기": "Request a designated quote",
+  "견적 요청 정보": "Quote request details",
+  "받은 견적": "Received quotes",
   "요청된 견적이 없습니다.": "No quotes have been requested.",
   "대기중인 견적이 없습니다.": "No pending quotes.",
   "찜한 기사님": "Favorite movers",
@@ -39,11 +64,9 @@
   "출발지를 선택해주세요.": "Please select a departure location.",
   "도착지를 선택해주세요.": "Please select a destination.",
   "견적 확정 완료": "Quote confirmed",
+  "견적 요청을 위해 먼저 프로필을 생성해주세요!": "Please create your profile before requesting a quote!",
   "견적 확정에 실패했습니다. 다시 시도해주세요.": "Failed to confirm quote. Please try again.",
-  "출발지를 선택해주세요": "Please select a departure",
-  "도착지를 선택해주세요": "Please select a destination",
   "확정 견적 상세 데이터가 없습니다": "No confirmed quote detail available",
-  "로딩 중...": "Loading...",
   "보낸 견적이 없습니다": "No sent quotes",
   "반려된 견적이 없습니다": "No rejected quotes",
   "아직 받은 요청이 없어요!": "No requests received yet!",
@@ -82,23 +105,23 @@
   "지정 견적을 요청하기 위해서는": "To request a designated quote",
   "일반 견적을 먼저 요청해야 합니다.": "You must request a general quote first.",
   "일반 견적 요청하기": "Request general quote",
-  "이미지 업로드가 완료될 때까지 기다려주세요.": "Please wait until the image upload is complete.",
+  "Images 업로드가 완료될 때까지 기다려주세요.": "Please wait until the images finish uploading.",
   "새 비밀번호가 일치하지 않습니다.": "New passwords do not match.",
   "프로필이 성공적으로 수정되었습니다.": "Profile updated successfully.",
   "프로필 수정 중 오류:": "Error updating profile:",
   "프로필 수정 중 오류가 발생했습니다.": "An error occurred while updating the profile.",
+  "프로필 정보를 불러오는 중...": "Loading profile information...",
   "프로필 수정": "Edit profile",
   "이용 서비스": "Services used",
   "*이용 서비스는 중복 선택 가능하며, 언제든 수정 가능해요!": "*You can select multiple services and edit anytime!",
   "내가 사는 지역": "My region",
   "*내가 사는 지역은 언제든 수정 가능해요!": "*You can update your region at any time!",
   "취소": "Cancel",
-  "프로필 이미지를 업로드해주세요.": "Please upload a profile image.",
+  "프로필 Images를 업로드해주세요.": "Please upload your profile images.",
   "프로필이 성공적으로 등록되었습니다.": "Profile registered successfully.",
   "프로필 등록 중 오류가 발생했습니다.": "An error occurred during profile registration.",
   "프로필 등록": "Register profile",
   "추가 정보를 입력하여 회원가입을 완료해주세요.": "Enter additional information to complete registration.",
-  "시작하기": "Get started",
   "프로필 이미지": "Profile image",
   "기본정보 수정": "Edit basic info",
   "제공 서비스를 하나 이상 선택해주세요.": "Please select at least one service provided.",
@@ -120,15 +143,10 @@
   "새 비밀번호를 입력하세요": "Enter new password",
   "새 비밀번호 확인": "Confirm new password",
   "새 비밀번호를 다시 입력하세요": "Re-enter new password",
-  "이름": "Name",
   "이름을 입력해주세요.": "Please enter your name.",
-  "이메일": "Email",
-  "전화번호": "Phone number",
   "리뷰 작성하러 가기": "Write a review",
   "도로명": "Road name",
   "지번": "Lot number",
-  "도로명, 지번, 건물명으로 검색": "Search by road name, lot number, or building name",
-  "선택완료": "Selection complete",
   "원룸, 투룸, 20평대 미만": "Studio, 2-room, under 20 pyeong",
   "쓰리룸, 20평대 미만": "3-room, under 20 pyeong",
   "기업, 사무실 이사": "Corporate/office move",
@@ -152,18 +170,23 @@
   "선택 완료": "Selection complete",
   "견적 대기": "Quote pending",
   "견적 확정": "Quote confirmed",
+  "선택완료": "Selection complete",
   "알림": "Notifications",
-  "일정": "Schedule",
-  "견적 요청": "Request quote",
-  "이사 견적": "Moving quote",
-  "defualt": "default",
+  "모두 읽음": "Mark all as read",
   "마이 페이지": "My Page",
   "이사 리뷰": "Moving reviews",
   "로그아웃": "Logout",
-  "로그인": "Login",
+  "견적 요청": "Request quote",
+  "내 견적 관리": "Manage my quotes",
+  "받은 요청": "Received requests",
   "로그아웃 되었습니다": "You have been logged out",
   "로그아웃 실패": "Logout failed",
-  "내 견적 관리": "Manage my quotes",
+  "대기중인 견적": "Pending quotes",
+  "받았던 견적": "Received quotes",
+  "작성 가능한 리뷰": "Reviews you can write",
+  "내가 작성한 리뷰": "My reviews",
+  "보낸 견적 조회": "Sent quotes",
+  "반려 요청": "Rejected requests",
   "견적요청": "Request quote",
   "출발지 선택하기": "Select departure",
   "도착지 선택하기": "Select destination",
@@ -186,9 +209,18 @@
   "아직 등록된 리뷰가 없어요 !": "No reviews yet!",
   "링크가 클립보드에 복사되었습니다.": "Link copied to clipboard.",
   "SNS 공유": "Share on SNS",
+  "링크를 확인해보세요!": "Check the link!",
+  "웹에서 보기": "View on web",
+  "카카오톡 공유 기능을 사용할 수 없습니다.": "KakaoTalk sharing is not available.",
+  "카카오톡 공유에 실패했습니다.": "Failed to share via KakaoTalk.",
   "로그인 성공": "Login successful",
   "로그인 실패": "Login failed",
   "회원가입 성공": "Signup successful",
   "회원가입 실패": "Signup failed",
-  "프로필 등록 후 이용 가능한 페이지입니다.": "This page will be available after you complete your profile registration."
+  "sort": {
+    "review_count": "Most Reviews",
+    "average_rating": "Highest Rating",
+    "experience": "Most Experience",
+    "confirmed_estimate_count": "Most Confirmed"
+  }
 }
